# digidecs

./: README.md  config.example.php  index.php
.github/workflows/: release.yml
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/layouts/components/: AppBar.vue  RouterView.vue
frontend/src/plugins/: vuetify.ts
frontend/src/plugins/locales/: en.ts  locale.ts  nl.ts
frontend/src/router/: index.ts
frontend/src/scripts/: digidecs.ts  iban.ts
frontend/src/scripts/core/: fetch1.ts
frontend/src/tests/: IBAN.test.js  vitest.config.ts
frontend/src/views/: HomeView.vue  SubmittedView.vue
server/: Cargo.toml  config.json
server/src/: main.rs
server/src/email/: ipv4.rs  mod.rs  template.rs
server/src/email/templates/: email_template.hbs  header.partial.hbs  submitter_en.hbs  submitter_nl.hbs  treasurer.hbs
server/src/file/: config.rs  mod.rs
server/src/server/: mod.rs
server/src/server/routes/: digidecs.rs  mod.rs
server/src/server/routes/digidecs/: attachment.rs  complete.rs  mod.rs  start.rs
server/src/server/types/: data.rs  error.rs  mod.rs
templates/: form.html  form.php
