[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-route-config = "0.1.1"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
lettre = { version = "0.11.9", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
noiseless-tracing-actix-web = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-actix-web = "0.7.12"
tokio = { version = "1.40.0", features = ["full"] }
nix = { version = "0.29.0", features = ["net", "socket"] }
futures-util = "0.3.30"
handlebars = "6.1.0"
regex = "1.10.6"
iban_validate = "4.0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
base64 = "0.22.1"